--- a/landing.html
+++ b/landing.html
@@ -5,259 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            box-sizing: border-box;
-            padding-left: 30px;
-            padding-right: 30px;
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            backdrop-filter: blur(10px);
-            justify-content: space-between;
-            z-index: 9999;
-        }
-
-        header button.secondary {
-            text-shadow: 0px 0px 5px var(--background-color);
-        }
-
-        footer {
-            display: flex;
-        }
-
-        footer ul {
-            padding-left: 0;
-        }
-
-        footer a {
-            color: var(--link-color);
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        .hero {
-            display: flex;
-            align-items: center;
-            height: 90vh;
-            padding-left: 100px;
-            padding-right: 100px;
-            justify-content: space-between;
-            margin-bottom: 30px;
-        }
-
-        .hero img {
-            border-radius: 15px;
-            max-width: 900px;
-            width: 100%;
-            height: auto;
-            box-shadow: 0px 40px 30px -20px #00000077;
-        }
-
-        section.normal {
-            max-width: 1200px;
-            margin: 0 auto;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
-        section.filler {
-            color: var(--background-color);
-            height: 300px;
-            border-radius: 15px;
-            overflow: hidden;
-            font-weight: bolder;
-            position: relative;
-            user-select: none;
-        }
-
-        .filler-start-now {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            backdrop-filter: blur(3px);
-        }
-
-        .infinite-scroll {
-            width: 200%;
-            overflow: hidden;
-            white-space: nowrap;
-            position: relative;
-            height: 1.5em;
-            margin: 0;
-            font-size: 165pt;
-            display: flex;
-            align-items: center;
-            -webkit-text-stroke: 1px var(--text-color);
-        }
-        .scroll-content {
-            display: inline-block;
-            padding-right: 2em;
-            animation: scroll-left 43s linear infinite;
-            will-change: transform;
-        }
-        .infinite-scroll.right .scroll-content {
-            animation-name: scroll-right;
-        }
-        @keyframes scroll-left {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(-50%); }
-        }
-        @keyframes scroll-right {
-            0% { transform: translateX(-50%); }
-            100% { transform: translateX(0); }
-        }
-
-        .note {
-            position: fixed;
-            left: 50%;
-            bottom: 0;
-            transform: translate(-50%, 0%);
-            text-align: center;
-            font-family: var(--font-editor);
-            text-shadow: 0px 0px 5px var(--background-color);
-        }
-
-        button.primary {
-            border-radius: 10px;
-            padding: 4px 8px 4px 8px;
-            border: 1px solid var(--highlight-color);
-            background: var(--selection-color);
-            color: var(--title-color);
-            font-size: 0.9em;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            min-width: 200px;
-            cursor: pointer;
-            transition: all 0.5s;
-        }
-
-        button.primary:hover {
-            background-color: var(--highlight-color);
-            box-shadow: 0px 0px 30px var(--highlight-color);
-        }
-
-        button.secondary {
-            border-radius: 10px;
-            padding: 4px 8px 4px 8px;
-            color: var(--text-color);
-            border: none;
-            background-color: transparent;
-            cursor: pointer;
-            min-height: 32px;
-            font-size: 0.9em;
-            transition: all 0.3s
-        }
-
-        button.secondary:hover {
-            background: var(--field-color);
-        }
-
-        .hero button.primary:hover .icon {
-            animation: pencil_move 0.5s;
-        }
-
-        @keyframes pencil_move {
-            0%   { transform: rotate(0deg); }
-            20%  { transform: rotate(-10deg); }
-            50%  { transform: rotate(10deg); }
-            80%  { transform: rotate(-10deg); }
-            100% { transform: rotate(0deg); }
-        }
-
-        .feature-container {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            border-radius: 15px;
-        }
-
-        .feature-container img {
-            border-radius: 15px;
-            max-width: 500px;
-            width: 100%;
-            height: auto;
-        }
-
-        .feature-container.left {
-            flex-direction: row;
-        }
-
-        .feature-container.right {
-            flex-direction: row-reverse;
-            text-align: end;
-        }
-
-        .thing-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-top: 25px;
-            margin-bottom: 25px;
-        }
-
-        .thing {
-            width: 24px;
-            height: 24px;
-            background-color: var(--text-color);
-            animation: thing-spin 1.5s infinite;
-        }
-
-        @keyframes thing-spin {
-            0%   { border-radius: 30px 10px 10px 10px; }
-            25%  { border-radius: 10px 30px 10px 10px; }
-            50%  { border-radius: 10px 10px 30px 10px; }
-            75%  { border-radius: 10px 10px 10px 30px; }
-            100% { border-radius: 30px 10px 10px 10px; }
-        }
-
-        @media screen and (max-width: 800px) {
-            .hero {
-                flex-direction: column;
-                align-items: initial;
-                padding: 0;
-                justify-content: initial;
-                padding-top: 100px;
-            }
-
-            .note {
-                display: none;
-            }
-
-            .feature-container, .feature-container.left, .feature-container.right {
-                flex-direction: column;
-                text-align: start;
-                background-color: var(--background-color-2);
-                border: 1px solid var(--border-light-color);
-                gap: 0;
-                overflow: hidden;
-                margin-top: 10px;
-            }
-
-            .feature-container img {
-                border-radius: 0;
-                width: 100%;
-                max-width: none;
-            }
-
-            .feature-container .feature-container-text {
-                margin: 5px;
-            }
-
-            .header-text {
-                display: none;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style/landing.css">
 </head>
 <body>
     <header>
