added final landing page images

--- a/landing.html
+++ b/landing.html
@@ -46,7 +46,6 @@
 
     <section class="normal" id="features">
         <h2>Features</h2>
-        <p>this section is a work in progress with anime girls</p>
         <div class="feature-container left">
             <img src="cohesion/landing/markdown.png" alt="">
             <div class="feature-container-text">
@@ -55,7 +54,7 @@
             </div>
         </div>
         <div class="feature-container right">
-            <img src="https://placewaifu.com/image/1920/1080" alt="">
+            <img src="cohesion/landing/storage.png" alt="">
             <div class="feature-container-text">
                 <h3>In-browser local storage</h3>
                 <p>Your files are not sent to us, Cohesion saves your files in your browser data, you can also create backups of all your data in one single click.</p>
@@ -69,7 +68,7 @@
             </div>
         </div>
         <div class="feature-container right">
-            <img src="https://placewaifu.com/image/1920/1080" alt="">
+            <img src="cohesion/landing/export.png" alt="">
             <div class="feature-container-text">
                 <h3>Easy export</h3>
                 <p>Export your notes to formats like PDF, HTML, or Markdown with just one click.</p>
