--- a/landing.html
+++ b/landing.html
@@ -17,6 +17,7 @@
         </div>
         <div style="display: flex; gap: 5px;">
             <button class="secondary" onclick="fadeOutAllDialogs()">Editor</button>
+            <button class="secondary" onclick="window.open('tools.html', '_self')">Tools</button>
             <button class="secondary" onclick="window.open('https://github.com/flarom/cohesion/wiki')">Documentation</button>
             <button class="secondary" onclick="window.open('https://github.com/flarom/cohesion')">GitHub</button>
             <button class="secondary" onclick="changeTheme();" style="font-size: large;" translate="no"><span class="icon">routine</span></button>
