--- a/tools.html
+++ b/tools.html
@@ -29,21 +29,21 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://flarom.github.io/cohesion/tools.html">
 
-    <link rel="stylesheet" href="../style/palette.css">
-    <link rel="stylesheet" href="../style/share.css">
-    <link rel="stylesheet" href="../style/landing.css">
+    <link rel="stylesheet" href="style/palette.css">
+    <link rel="stylesheet" href="style/share.css">
+    <link rel="stylesheet" href="style/landing.css">
 </head>
 <body>
     <header>
         <div>
-            <a href="../index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
-                <img src="../cohesion/favicon.png" alt="" width="48">
+            <a href="index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
+                <img src="cohesion/favicon.png" alt="" width="48">
                 <h2 translate="no" class="header-text">Cohesion</h2>
             </a>
         </div>
         <div style="display: flex; gap: 5px;">
-            <button class="secondary" onclick="window.open('../index.html', '_self')">Editor</button>
-            <button class="secondary" onclick="window.open('../tools.html', '_self')">Tools</button>
+            <button class="secondary" onclick="window.open('index.html', '_self')">Editor</button>
+            <button class="secondary" onclick="window.open('tools.html', '_self')">Tools</button>
             <button class="secondary" onclick="window.open('https://github.com/flarom/cohesion/wiki')">Documentation</button>
             <button class="secondary" onclick="window.open('https://github.com/flarom/cohesion')">GitHub</button>
             <button class="secondary" onclick="changeTheme();" style="font-size: large;" translate="no"><span class="icon">routine</span></button>
@@ -54,7 +54,7 @@
         <a href="tools/markdown-table-editor.html">Table editor</a>
     </section>
 
-    <script src="../script/settings.js"></script>
+    <script src="script/settings.js"></script>
     <script>
         // load settings
         function loadSettings(){
