--- a/tools.html
+++ b/tools.html
@@ -32,6 +32,23 @@
     <link rel="stylesheet" href="style/palette.css">
     <link rel="stylesheet" href="style/share.css">
     <link rel="stylesheet" href="style/landing.css">
+
+    <style>
+        .tool-item {
+            max-width: 393px;
+            background-color: var(--background-color-2);
+            overflow: hidden;
+            border-radius: 15px;
+
+            img {
+                max-width: 100%;
+            }
+
+            .tool-description {
+                padding: 0px 10px 10px 10px;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -50,8 +67,22 @@
         </div>
     </header>
 
-    <section class="main" style="margin-top: 100px;">
-        <a href="tools/markdown-table-editor.html">Table editor</a>
+    <section class="main" style="max-width: 1200px; margin: 0 auto; margin-top: 100px; padding: 10px;">
+        <h1>Tools</h1>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <div class="tool-item">
+                <div>
+                    <a href="tools/markdown-table-editor.html"><img src="cohesion/landing/table.png" alt=""></a>
+                </div>
+                <div class="tool-description">
+                    <h2>Table editor</h2>
+                    <p>Create and edit Markdown tables with ease.</p>
+                    <div style="display: flex; align-items: center; justify-content: end;">
+                        <button class="text-button" onclick="window.open('tools/markdown-table-editor.html', '_self')">Try it out</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="script/settings.js"></script>
